# precommit-hooks

./: .hadolint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-config-hooks.yaml  README.md  myproject.toml  private_key_check.py  setup.cfg  setup.py  test.py
pre_commit_hooks/: .hadolint.yaml  .yamllint.yaml  private_key_check.py  run_hadolint.py  run_hadolint.sh  run_json_linter.py  run_json_linter.sh  run_validate_docker_compose.py  run_yamllint.py  run_yamllint.sh  validate_docker_compose.sh
pre_commit_hooks/config/: .hadolint.yaml
tests/: test_precommits.py
