[metadata]
name = pre-commit-hooks
version = 0.1
author = Harsh Jadon
description = Pre-commit hook for checking private keys in the staged files
url = https://github.com/tanx-libs/precommit-hooks
license = MIT

[options]
packages = find:
python_requires = >=3.6

[options]
packages = find:

[options.entry_points]
console_scripts =
    private_key_check = private_key_check:main