[metadata]
name = pre_commit_hooks
version = 1.0.0
author = Harsh Jadon
description = Pre-commit hooks for verifing the staged files
url = https://github.com/tanx-libs/precommit-hooks
license = MIT

[options]
packages = find:
python_requires = >=3.6

[options]
packages = find:

[options.entry_points]
console_scripts =
    private_key_check = pre_commit_hooks.private_key_check:main