[metadata]
name = precommit-hooks

[options.entry_points]
console_scripts =
    private_key_check = pre_commit_hooks.private_key_check:main
    docker_compose_validate = pre_commit_hooks.run_validate_docker_compose:main
    dockerfile_lint = pre_commit_hooks.run_hadolint:main
    json_lint = pre_commit_hooks.run_json_linter:main
    yaml_lint = pre_commit_hooks.run_yamllint:main